--- a/package.json
+++ b/package.json
@@ -1,28 +1,39 @@
 {
   "name": "lendsqrfpnews",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "1.17.11",
     "@react-native-community/checkbox": "^0.5.15",
+    "@react-native-firebase/app": "^18.0.0",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
+    "@reduxjs/toolkit": "^1.9.5",
+    "axios": "^1.4.0",
     "expo": "~48.0.18",
+    "expo-auth-session": "~4.0.3",
     "expo-constants": "~14.2.1",
+    "expo-crypto": "~12.2.1",
+    "expo-google-app-auth": "~8.3.0",
+    "expo-splash-screen": "~0.18.2",
     "expo-status-bar": "~1.4.4",
+    "expo-web-browser": "~12.1.1",
+    "firebase": "^9.22.2",
     "formik": "^2.4.1",
     "lottie-ios": "3.4.1",
-    "lottie-react-native": "^6.0.0-rc.6",
+    "lottie-react-native": "5.1.4",
     "react": "18.2.0",
     "react-native": "0.71.8",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
+    "react-redux": "^8.1.0",
+    "redux": "^4.2.1",
     "yup": "^1.2.0"
   },
   "devDependencies": {
