--- a/app.json
+++ b/app.json
@@ -9,7 +9,7 @@
     "splash": {
       "image": "./assets/logo2.png",
       "resizeMode": "contain",
-      "backgroundColor": "#40c9b7"
+      "backgroundColor": "#fff"
     },
     "assetBundlePatterns": ["**/*"],
     "ios": {
@@ -18,7 +18,7 @@
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/logo2.png",
-        "backgroundColor": "#40c9b7"
+        "backgroundColor": "#fff"
       },
       "package": "com.ogmeech.LendsqrfpNews"
     },
