--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "lottie-react-native": "5.1.4",
     "react": "18.2.0",
     "react-native": "0.71.8",
+    "react-native-config": "^1.5.1",
+    "react-native-dotenv": "^3.4.8",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "react-redux": "^8.1.0",
