--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,5 +1,7 @@
 apply plugin: "com.android.application"
 apply plugin: "com.facebook.react"
+apply plugin: "com.google.firebase.crashlytics"
+apply plugin: "com.google.firebase.firebase-perf"
 
 import com.android.build.OutputFile
 
@@ -115,6 +117,7 @@ android {
 
     namespace 'com.ogmeech.LendsqrfpNews'
     defaultConfig {
+        manifestPlaceholders = [appAuthRedirectScheme: 'mycoolredirect']
         applicationId 'com.ogmeech.LendsqrfpNews'
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
@@ -193,7 +196,14 @@ dependencies {
     apply plugin: 'com.google.gms.google-services'
     // The version of react-native is set by the React Native Gradle Plugin
     implementation("com.facebook.react:react-android")
+      implementation platform('com.google.firebase:firebase-bom:32.1.1')
+      implementation 'com.google.firebase:firebase-crashlytics-ktx'
+    implementation 'com.google.firebase:firebase-analytics-ktx'
      classpath 'com.google.gms:google-services:4.3.15'
+     implementation 'com.google.firebase:firebase-perf-ktx'
+      implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.0.0' 
+     
+     
 
     def isGifEnabled = (findProperty('expo.gif.enabled') ?: "") == "true";
     def isWebpEnabled = (findProperty('expo.webp.enabled') ?: "") == "true";
@@ -237,3 +247,4 @@ dependencies {
 
 apply from: new File(["node", "--print", "require.resolve('@react-native-community/cli-platform-android/package.json')"].execute(null, rootDir).text.trim(), "../native_modules.gradle");
 applyNativeModulesAppBuildGradle(project)
+apply plugin: 'com.google.gms.google-services'
