--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,4 +1,7 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
+apply plugin: "com.android.application"
+apply plugin: "com.facebook.react"
+apply plugin: "com.google.firebase.crashlytics"
 
 buildscript {
     ext {
@@ -13,6 +16,7 @@ buildscript {
 
         // We use NDK 23 which has both M1 support and is the side-by-side NDK version from AGP.
         ndkVersion = "23.1.7779620"
+         googlePlayServicesAuthVersion = "19.2.0"
     }
     repositories {
         google()
@@ -21,6 +25,9 @@ buildscript {
     dependencies {
         classpath('com.android.tools.build:gradle:7.4.1')
         classpath('com.facebook.react:react-native-gradle-plugin')
+         classpath 'com.google.firebase:firebase-crashlytics-gradle:2.9.6'
+         classpath 'com.google.gms.google-services:4.3.15'
+         classpath 'com.google.firebase:perf-plugin:1.4.2'
     }
 }
 
