--- a/package.json
+++ b/package.json
@@ -5,27 +5,48 @@
     "start": "expo start --dev-client",
     "android": "expo run:android",
     "ios": "expo run:ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "test": "jest"
+  },
+  "jest": {
+    "preset": "jest-expo",
+    "transformIgnorePatterns": [
+      "node_modules/(?!((jest-)?react-native|@react-native(-community)?)|expo(nent)?|@expo(nent)?/.*|@expo-google-fonts/.*|react-navigation|@react-navigation/.*|@unimodules/.*|unimodules|sentry-expo|native-base|react-native-svg|@react-native-async-storage/async-storage)"
+    ],
+    "setupFiles": [
+      "./_tests/signup.test.js"
+    ],
+    "transform": {
+      "^.+\\.(js|jsx)$": "babel-jest"
+    }
   },
   "dependencies": {
+    "@babel/preset-react": "^7.22.5",
     "@react-native-async-storage/async-storage": "1.17.11",
     "@react-native-community/checkbox": "^0.5.15",
     "@react-native-firebase/app": "^18.0.0",
+    "@react-native-google-signin/google-signin": "^10.0.1",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "@reduxjs/toolkit": "^1.9.5",
+    "appcenter": "^4.4.5",
+    "appcenter-analytics": "^4.4.5",
+    "appcenter-crashes": "^4.4.5",
     "axios": "^1.4.0",
+    "code-push-cli": "^3.0.0",
     "expo": "~48.0.18",
     "expo-auth-session": "~4.0.3",
     "expo-constants": "~14.2.1",
     "expo-crypto": "~12.2.1",
+    "expo-dev-client": "~2.2.1",
     "expo-google-app-auth": "~8.3.0",
     "expo-splash-screen": "~0.18.2",
     "expo-status-bar": "~1.4.4",
     "expo-web-browser": "~12.1.1",
     "firebase": "^9.22.2",
     "formik": "^2.4.1",
+    "jest-expo": "^48.0.2",
     "lottie-ios": "3.4.1",
     "lottie-react-native": "5.1.4",
     "react": "18.2.0",
@@ -34,12 +55,16 @@
     "react-native-dotenv": "^3.4.8",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
+    "react-native-webview": "^13.2.2",
     "react-redux": "^8.1.0",
+    "react-test-renderer": "18.2.0",
     "redux": "^4.2.1",
     "yup": "^1.2.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@testing-library/react-native": "^12.1.2",
+    "jest": "^29.2.1"
   },
   "private": true
 }
